--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==0.11.0
 astunparse==1.6.3
+autopep8==1.5.4
 cached-property==1.5.2
 cachetools==4.2.0
 certifi==2020.12.5
@@ -26,14 +27,18 @@ matplotlib==3.3.3
 numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
+pandas==1.1.5
 Pillow==8.1.0
 protobuf==3.14.0
 psutil==5.8.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.6.0
 pycparser==2.20
+PyMySQL==1.0.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
+pytz==2021.1
 PyYAML==5.3.1
 requests==2.25.1
 requests-oauthlib==1.3.0
@@ -43,12 +48,14 @@ scipy==1.5.4
 serial==0.0.97
 six==1.15.0
 sklearn==0.0
+SQLAlchemy==1.3.23
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.4.0
 tensorflow-estimator==2.4.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
+toml==0.10.2
 typing-extensions==3.7.4.3
 urllib3==1.26.2
 Werkzeug==1.0.1
